# OpenGLTemplate

./: .gitignore  CMakeLists.txt
lib/: glfw3.lib  soil2-debug.lib
src/: Utils.cpp  Utils.h  main.cpp
